# ecocode-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  sample_targets.py
experment/: README.md  __init__.py  app.py
experment/app1/: README.md  __init__.py  app.py
experment/app2/: README.md  __init__.py  app.py
src/ecocode/: __init__.py  cli.py  compare.py  profiler.py  report.py  sample_targets.py  static_analysis.py
tests/: test_ecocode.py
